Creating servers n shit zzzz

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
     </style>
   </head>
-  <body onload="IonPrompt.IonPromptStyle(); NotificationStyle(); LoadServerList('.serverlist');">
+  <body onload="IonPrompt.IonPromptStyle(); NotificationStyle(); LoadServerList('.serverlist'); AddPromptToCmdPanel();">
     <div class="serverlist">
       <!-- Servers go here -->
     </div>
